[package]
name = "marketplace-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "TCMPhJdwDryooaGtiocG1u3xcYbRpiJzb283XfCZsDp"
program-dependencies = [
    "auth9SigNpDKz4sJJ1DfCTuZrZNSAgh9sFD3rboVmgg",
    "BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY",
    "metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s",
    "cmtDvXumGCrqC1Age74AVPhSRVXJMd8PJS91L8KbNCK",
    "noopb9bkMVfRPU8AsbpTUg8AQkHtKwMYZiFUjNRtMmV",
    "TSWAPaqyCSx2KABk68Shruf4rp7CxcNi8hAsbdwmHbN",
    "TL1ST2iRBzuGTqLn1KXnGdSnEow62BzPnGiqyRXhWtW",
    "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "wns1gDLt8fgLcGhWi5MqAqgXpwEP1JftKE9eZnXS1HM",
    "diste3nXmK7ddDTs1zb6uday6j4etCa9RChD8fJ1xay",
    "CoREENxT6tW1HoK8ypY1SxRMZTcVPm7R94rH4PZNhX7d",
]
account-dependencies = ["9SUrE3EPBoXVjNywEDHSJKJdxebs8H8sLgEWdueEvnKX"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["default"] }
mpl-bubblegum = "1.0.0"
metaplex-core = { package = "mpl-core", version = "0.4.3" }
mpl-token-metadata = "4.0.0"
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
spl-type-length-value = "0.3.0"
static_assertions = "1.1.0"
tensor-toolbox = { version = "0.0.5", git = "ssh://git@github.com/tensor-foundation/toolbox.git", rev = "fb9b979", features = [
    "cnft",
    "mpl-core",
    "token-2022",
] }
tensor-whitelist = { package = "whitelist-program", git = "ssh://git@github.com/tensor-foundation/whitelist.git", rev = "d01e101", features = [
    "cpi",
] }
tensorswap = { package = "escrow-program", git = "ssh://git@github.com/tensor-foundation/escrow.git", rev = "be5d585", features = [
    "cpi",
] }
vipers = { version = "2.0.6", git = "ssh://git@github.com/tensor-foundation/toolbox.git", rev = "a6c7423" }
