[package]
name = "tensor-marketplace"
version = "0.5.0"
description = "Client crate for the Tensor Foundation marketplace program."
repository = "https://github.com/tensor-foundation/marketplace"
homepage = "https://github.com/tensor-foundation/marketplace"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
anchor = ["anchor-lang"]
anchor-idl-build = ["anchor-lang/idl-build"]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
anchor-lang = { version = "0.29.0", optional = true }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "^1.16"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~1.17"
solana-sdk = "~1.17"
