[package]
name = "brick"
version = "1.0.1"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []
testing = []

[dependencies]
solana-program = "=1.14.29"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
