[package]
name = "cpi_test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.29.0"
marketplace-program = { path="../marketplace", features = [ "no-entrypoint", "cpi" ]}
