[package]
name = "tcomp"
version = "2.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tcomp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features =  ["default"] }
mpl-bubblegum = "1.0.0"
mpl-token-metadata = "4.0.0"
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
static_assertions = "1.1.0"
tensor_nft = { version="0.3.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="154a36a8bbc485b882da6b6a8f11838b60c67c82" }
tensor_whitelist = { version="0.2.1", git="ssh://git@github.com/tensor-hq/tensorswap.git", rev="553a52a593857f0fb59055e4b42ce3a8f12246a6", features=["cpi"] }
tensorswap = { version = "3.0.1", git="ssh://git@github.com/tensor-hq/tensorswap.git", rev="553a52a593857f0fb59055e4b42ce3a8f12246a6", features=["cpi"] }
vipers = {  version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="154a36a8bbc485b882da6b6a8f11838b60c67c82" }
