[package]
name = "tcomp"
version = "2.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tcomp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
testing = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features =  ["default"] }
mpl-bubblegum = "1.0.0"
mpl-token-metadata = "4.0.0"
spl-account-compression = { version = "0.2.0", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.0"
spl-type-length-value = "0.3.0"
static_assertions = "1.1.0"
tensor_nft = { version="0.3.0", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="e0637e7f0dd1172af8824f8662fee2224f52e7c1" }
tensor_whitelist = { version="0.2.1", git="ssh://git@github.com/tensor-hq/tensorswap.git", rev="636faac9a2e1d312a15a8914a5b1ded2b6b55029", features=["cpi"] }
tensorswap = { version = "3.0.1", git="ssh://git@github.com/tensor-hq/tensorswap.git", rev="636faac9a2e1d312a15a8914a5b1ded2b6b55029", features=["cpi"] }
vipers = {  version="2.0.6", git="ssh://git@github.com/tensor-hq/tensor-common-rs.git", rev="e0637e7f0dd1172af8824f8662fee2224f52e7c1" }
